# clibs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  run_test.sh
.github/workflows/: c-cpp.yml  cmake.yml  makefile.yml
avl/: .clang-format  .gitignore  CMakeLists.txt  Makefile
avl/include/: avl.h  dbg.h
avl/src/: avl.c  dbg.c  main.c
avl/test/: Makefile  main_test.cc
commons/: CMakeLists.txt  Makefile
commons/include/: data_gen.h  stdtypes.h
data_gen/: CMakeLists.txt  Makefile
data_gen/include/: mt_19937_64.h
data_gen/src/: data_gen.c
tests/: Makefile  avl_tests.cc  main_test.cc
tests/include/: utils.h
trie/: CMakeLists.txt
trie/include/: trie.h
trie/src/: trie.c
